# xdu-thesis-template

./: .chktexrc  .gitignore  .gitmodules  AGENTS.md  Makefile  README.md  latexindent.yaml  main.tex  main_blind.tex  pyproject.toml  references.bib  xdupgthesis.cls
chapters/: AGENTS.md  abstract-en.tex  abstract-zh.tex  acknowledgements.tex  appendixA.tex  appendixB.tex  bio.tex  bio_blind.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  conclusion.tex  example.tex  loa.tex  los.tex
draft/01-绪论/: 国内外研究现状编写教程.md
draft/02-相关理论/: Markdown拆分与merge_doc使用教程.md
prompt/: 论文优化助手.md  论文撰写风格.md  论文正文助手.md  论文润色助手.md
scripts/: AGENTS.md  merge_doc.py  toc_to_markdown.py
scripts/plotting/: AGENTS.md  Makefile  fig_demo.py
scripts/plotting/utils/: __init__.py  drawhelp.py
template/: 1、西安电子科技大学研究生学位论文模板（2015年版）-2025.1修订.docx  2、西安电子科技大学专业学位硕士学位论文封面及中英文题名页模板（2015年版）-2022.11修订.docx
