[project]
name = "article"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "nbformat>=4.2.0",
    "plotly>=6.5.2",
    "scipy>=1.17.0",
    "xidianplots",
]

[tool.uv.sources]
xidianplots = { git = "https://github.com/Huffer342-WSH/XiDianPlots.git" }

[tool.ruff]
ignore = ["E402","I001"]
